<resources>
    <string name="toolbar_app_title">Vocabulary Trainer</string>
    <string name="toolbar_add_card_title">Add Card</string>
    <string name="toolbar_edit_card_title">Edit Card</string>
    <string name="nothing_to_learn">Nothing to learn at the moment</string>
    <string name="reveal">Reveal</string>
    <string name="wrong">Wrong</string>
    <string name="correct">Correct</string>
    <string name="close_app">Close App</string>
    <string name="frontside">Frontside</string>
    <string name="frontside_hint">Frontside</string>
    <string name="backside">Backside</string>
    <string name="backside_hint">Backside</string>
    <string name="add_card">Add Card</string>
    <string name="cancel">Cancel</string>
    <string name="message_enter_front_side">Please enter a front side text</string>
    <string name="message_enter_back_side">Please enter a back side text</string>
    <string name="message_card_added">Card added</string>
    <string name="message_card_removed">Card removed</string>
    <string name="message_card_updated">Card updated</string>
    <string name="message_card_learned">You successfully learned \'%s\'! Card removed</string>
    <string name="dialog_remove_flashcard_title">Remove card</string>
    <string name="dialog_remove_flashcard_message">Do you want to remove this card?</string>
    <string name="save">Save</string>
    <string name="keep_adding">Keep adding</string>
    <string name="daily_learn_check_notification_title">Vocabulary learning</string>
    <string name="daily_learn_check_notification_text">Some flashcards need attention</string>
    <string name="action_disable_daily_notification">Disable notifications</string>
    <string name="daily_notification_channel_name">Daily learning reminder</string>
</resources>
