<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/splashScreenFragment">

    <fragment
        android:id="@+id/splashScreenFragment"
        android:name="com.jueggs.vocabularytrainer.fragments.SplashScreenFragment">
        <action
            android:id="@+id/action_splashScreenFragment_to_nothingToLearnFragment"
            app:destination="@id/nothingToLearnFragment" />
        <action
            android:id="@+id/action_splashScreenFragment_to_learnFragment"
            app:destination="@id/learnFragment" />
    </fragment>
    <fragment
        android:id="@+id/nothingToLearnFragment"
        android:name="com.jueggs.vocabularytrainer.fragments.NothingToLearnFragment"
        android:label="@string/toolbar_app_title">
        <action
            android:id="@+id/action_nothingToLearnFragment_to_addFlashCardFragment"
            app:destination="@id/addFlashCardFragment" />
    </fragment>
    <fragment
        android:id="@+id/learnFragment"
        android:name="com.jueggs.vocabularytrainer.fragments.LearnFragment"
        android:label="@string/toolbar_app_title">
        <action
            android:id="@+id/action_learnFragment_to_nothingToLearnFragment"
            app:destination="@id/nothingToLearnFragment" />
        <action
            android:id="@+id/action_learnFragment_to_addFlashCardFragment"
            app:destination="@id/addFlashCardFragment" />
        <action
            android:id="@+id/action_learnFragment_to_editFlashCardFragment"
            app:destination="@id/editFlashCardFragment" />
    </fragment>
    <fragment
        android:id="@+id/addFlashCardFragment"
        android:name="com.jueggs.vocabularytrainer.fragments.AddFlashCardFragment"
        android:label="@string/toolbar_add_card_title" />
    <fragment
        android:id="@+id/editFlashCardFragment"
        android:name="com.jueggs.vocabularytrainer.fragments.EditFlashCardFragment"
        android:label="@string/toolbar_edit_card_title">
        <argument
            android:name="flashCardId"
            android:defaultValue="-1L"
            app:argType="long" />
    </fragment>
</navigation>