<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.jueggs.vocabularytrainer.viewmodels.AddFlashCardViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/conRoot"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusableInTouchMode="true"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:paddingBottom="8dp">

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="16dp"
            android:fillViewport="true"
            app:layout_constraintBottom_toTopOf="@id/btnAddCard"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:paddingBottom="16dp">

                <Switch
                    android:id="@+id/swtKeepAdding"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="@={viewModel.isKeepAdding}"
                    android:switchPadding="16dp"
                    android:text="@string/keep_adding"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toTopOf="@id/txtFrontSideLabel"
                    app:layout_constraintStart_toStartOf="@id/cardFrontSide" />

                <TextView
                    android:id="@+id/txtFrontSideLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/frontside"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="@id/cardFrontSide"
                    app:layout_constraintTop_toBottomOf="@id/swtKeepAdding" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardFrontSide"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginTop="8dp"
                    android:elevation="@dimen/flashcard_elevation"
                    app:cardBackgroundColor="@color/box1_background"
                    app:cardUseCompatPadding="true"
                    app:layout_constraintDimensionRatio="16:11"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txtFrontSideLabel"
                    app:layout_constraintWidth_percent="0.8">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <EditText
                            android:id="@+id/edtFrontSide"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="@dimen/margin_add_card_inputs"
                            android:layout_marginEnd="@dimen/margin_add_card_inputs"
                            android:ems="10"
                            android:inputType="textPersonName"
                            android:text="@={viewModel.frontSideText}" />
                    </FrameLayout>
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/txtBackSideLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/backside"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="@id/txtFrontSideLabel"
                    app:layout_constraintTop_toBottomOf="@id/cardFrontSide" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardBackSide"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginTop="8dp"
                    android:elevation="@dimen/flashcard_elevation"
                    app:cardBackgroundColor="@color/box1_background"
                    app:cardUseCompatPadding="true"
                    app:layout_constraintDimensionRatio="16:11"
                    app:layout_constraintEnd_toEndOf="@id/cardFrontSide"
                    app:layout_constraintStart_toStartOf="@id/txtBackSideLabel"
                    app:layout_constraintTop_toBottomOf="@id/txtBackSideLabel"
                    app:layout_constraintWidth_percent="0.8">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:clipToPadding="false">

                        <EditText
                            android:id="@+id/edtBackSide1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/margin_add_card_inputs"
                            android:layout_marginEnd="@dimen/margin_add_card_inputs"
                            android:ems="10"
                            android:inputType="text"
                            android:text="@={viewModel.backSideTexts[0]}"
                            app:layout_constraintBottom_toTopOf="@+id/edtBackSide2"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_chainStyle="packed" />

                        <EditText
                            android:id="@+id/edtBackSide2"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:inputType="text"
                            android:text="@={viewModel.backSideTexts[1]}"
                            app:layout_constraintBottom_toTopOf="@+id/edtBackSide3"
                            app:layout_constraintEnd_toEndOf="@id/edtBackSide1"
                            app:layout_constraintStart_toStartOf="@id/edtBackSide1"
                            app:layout_constraintTop_toBottomOf="@+id/edtBackSide1" />

                        <EditText
                            android:id="@+id/edtBackSide3"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:ems="10"
                            android:inputType="text"
                            android:text="@={viewModel.backSideTexts[2]}"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="@id/edtBackSide1"
                            app:layout_constraintStart_toStartOf="@id/edtBackSide1"
                            app:layout_constraintTop_toBottomOf="@+id/edtBackSide2" />

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <Button
            android:id="@+id/btnAddCard"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="@{() -> viewModel.addFlashCard()}"
            android:text="@string/add_card"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnCancel"
            app:layout_constraintStart_toStartOf="parent"
            tools:visibility="visible" />

        <Button
            android:id="@+id/btnSaveCard"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="@{() -> viewModel.updateFlashCard()}"
            android:text="@string/save"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btnCancel"
            app:layout_constraintStart_toStartOf="parent"
            tools:visibility="visible" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="@{() -> viewModel.cancel()}"
            android:text="@string/cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnAddCard"
            app:layout_constraintTop_toTopOf="@id/btnAddCard" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>